--- a/Conda_Envs/Scanpy_env.yml
+++ b/Conda_Envs/Scanpy_env.yml
@@ -1,4 +1,4 @@
-name: qc_pipe
+name: scanpy_env
 channels:
   - conda-forge
   - defaults
@@ -135,4 +135,3 @@ dependencies:
     - sortedcontainers==2.3.0
     - urllib3==1.26.4
     - zarr==2.8.1
-prefix: /home/bob/anaconda3/envs/qc_pipe
